@@ -1,14 +1,11 @@
 package com.example.demo.modules.report;
 
 import com.example.demo.modules.user.dtos.UserDTO;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Function;
+import java.util.function.BiFunction;
 
 @Data
 @AllArgsConstructor
@@ -16,8 +13,9 @@ import java.util.function.Function;
 @Builder
 public class UserExportTemplate implements ExportTemplate<UserDTO> {
 
-    private static final List<String> HEADER = List.of("ID", "Username", "Email", "Name", "Status", "Created By", "Updated By", "Created At", "Updated At");
-    private static final Function<UserDTO, List<Object>> ROW_DATA_EXTRACTOR = user -> Arrays.asList(
+    private static final List<String> HEADER = List.of("Order", "ID", "Username", "Email", "Name", "Status", "Created By", "Updated By", "Created At", "Updated At");
+    private static final BiFunction<UserDTO, Integer, List<Object>> ROW_EXTRACTOR = (user, index) -> Arrays.asList(
+            index,
             user.getId(),
             user.getUsername(),
             user.getEmail(),
@@ -29,10 +27,14 @@ public class UserExportTemplate implements ExportTemplate<UserDTO> {
             user.getUpdatedAt());
 
     private List<UserDTO> body;
+    @Setter
+    @Getter
+    @Builder.Default
     private boolean skipHeader = false;
 
     @Override
     public List<String> getHeader() {
+        if (skipHeader) return null;
         return HEADER;
     }
 
@@ -42,13 +44,8 @@ public class UserExportTemplate implements ExportTemplate<UserDTO> {
     }
 
     @Override
-    public Function<UserDTO, List<Object>> getRowExtractor() {
-        return ROW_DATA_EXTRACTOR;
-    }
-
-    @Override
-    public boolean getSkipHeader() {
-        return skipHeader;
+    public BiFunction<UserDTO, Integer, List<Object>> getRowExtractor() {
+        return ROW_EXTRACTOR;
     }
 
 }
